# my-changelogger

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dev-ledger/: 2026-07-07.jsonl  2026-07-12.jsonl
src/mychangelogger/: __init__.py  changelog.py  changelogger.py  cli.py
tests/: conftest.py  test_changelog.py  test_changelogger.py  test_cli.py
