[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-changelogger"
version = "0.0.1"
description = "Turns dev-ledger ship/fix/build entries into a CHANGELOG.md section and opens a PR."
authors = [{ name = "Lorenzo Liuzzo", email = "lorenzoliuzzo@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["mythings-core"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "pre-commit>=3"]

[project.scripts]
mychangelogger = "mychangelogger.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mychangelogger"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: integration/slow tests, excluded from the fast local loop"]
